# CXG_ACT_TRANSFER_POC

./: .gitignore  README.md  ROADMAP.md  census-joinid-pipeline-test.md  demo_scenario_b.py  export.csv  main.py  pilot_bitmap_build.py  pilot_output.txt  pyproject.toml  test_joinid.py
bitmaps/: 06f05fd2-5a29-5aa9-a180-46a2fc439f2f__stable.bitmap  0bbd8571-0a40-5879-93f5-2d617c4384d7__stable.bitmap  1b47dde9-bdd9-527a-93b1-0c5e36132a56__stable.bitmap  287ae2ec-1eb9-5ad1-85fb-7b3c426be9d7__stable.bitmap  c9009fef-c51e-52f1-a294-2c8f91a857bd__stable.bitmap  cb938fe5-0b80-5770-bce2-c647fdbd69d7__stable.bitmap  e26bfbba-57bd-5e8e-995c-b47498b05f8a__stable.bitmap  f1a1629e-eb70-546c-a092-bc76232cfef3__stable.bitmap
