[project]
name = "cxg-act-transfer-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anndata>=0.12.10",
    "cellxgene-census>=1.17.0",
    "cxg-query-enhancer>=0.2.3",
    "ipython>=9.11.0",
    "neo4j>=6.1.0",
    "pyroaring>=1.0.3",
]
